correction post-formation

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -34,7 +34,8 @@
       "**Pierre de Buyl** pierre.debuyl@chem.kuleuven.be <http://homepages.ulb.ac.be/~pdebuyl/>  \n",
       "KU Leuven\n",
       "  \n",
-      "License CC-BY http://creativecommons.org/licenses/by/4.0/\n"
+      "License [CC-BY](http://creativecommons.org/licenses/by/4.0/)\n",
+      "(exemple 'marche al\u00e9atoire' inspir\u00e9 de [Python Scientific Lecture Notes](http://scipy-lectures.github.io/) sous [CC-BY 3.0](http://creativecommons.org/licenses/by/3.0/), E. Gouillart, V. Haenel et G. Varoquaux)"
      ]
     },
     {
@@ -49,7 +50,7 @@
       "---------------------\n",
       "\n",
       "- Cette pr\u00e9sentation est \u00e9crite dans un *Notebook* IPython.\n",
-      "- Tous les exemples de code peuvent \u00eatre copi\u00e9s et coll\u00e9s dans un terminal ou un notebook IPython (apr\u00e8s requ\u00eate \"%pylab\").\n",
+      "- Tous les exemples de code peuvent \u00eatre copi\u00e9s et coll\u00e9s dans un terminal ou un notebook IPython (apr\u00e8s requ\u00eate \"%pylab inline\").\n",
       "- Cette pr\u00e9sentation utilise Python 2 (Python 3 existe mais n'est pas celle utilis\u00e9e par d\u00e9faut).\n",
       "- N'h\u00e9sitez pas \u00e0 m'interrompre."
      ]
@@ -113,7 +114,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print print(\"Hello world!\")\n",
+      "print(\"Hello world!\")\n",
       "s = \"Hello, old brown fox.\"\n",
       "print s.upper()"
      ],
@@ -141,6 +142,7 @@
      "input": [
       "def f(i):\n",
       "    return i**i**i\n",
+      "\n",
       "print f(2)"
      ],
      "language": "python",
@@ -891,7 +893,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 4
     },
     {
      "cell_type": "heading",
@@ -1075,6 +1077,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "with open('csvdata.csv', 'w') as f:\n",
+      "    for i in range(7): f.write(\"%d,%d\\n\" % (i, i+i**2*0.1))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "import csv\n",
       "reader = csv.reader(open('csvdata.csv'))\n",
       "x = [] ; y = []\n",
@@ -1091,21 +1105,21 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 103,
+       "prompt_number": 6,
        "text": [
-        "[<matplotlib.lines.Line2D at 0xbc261d0>]"
+        "[<matplotlib.lines.Line2D at 0x4725bd0>]"
        ]
       },
       {
        "metadata": {},
        "output_type": "display_data",
-       "png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAAEACAYAAACj0I2EAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFoBJREFUeJzt3X+cVHW9x/HXInKVi2mGPwLUpURvKHUt0VKJSU1NUfxx\nS/xxuxdSCwy9gCirPWTVfvgjFKTUW10UMrbwRyZJpqhT2BWpAEWRBIIuaP5cSzdFWXbuH+fgDsvu\nztnZ2T0z57yej8c85syZM+PHecB7D5/v+cyCJEmSJEmSJEmSJEmSJElSWZgFvAysaLF/PPAc8Axw\nXd7+GmA1sAo4rjsKlCRFMww4hG0D/XPAw8CO4eM9wvvBwPJwfzWwBujRLVVKkiKpZttAnwcc3cpx\nNcBleY8fBD7ddWVJkvIVcwY9CPgssBjIAoeG+/sBG/OO2wj070xxkqToehb5mg8SnH0PJThj/0gb\nx+aKrEuS1EHFBPpG4N5w+/dAE9AXeAHYJ++4AeG+bXz0ox/NrV27toj/rCSl2lpg//YOKKblch/N\nPfQDgF7Aa8D9wKjw8UCC1syS7Spau5ZcLuctl2Pq1Kmx11AuNz8LPws/i+1vcx9bStWlezD9vizA\nRwuFc6FArwP+NwzuDcBogksZP0KwUFoHfDk8diVB+2Ul8CtgHLZcJKko2af+zLkLRjDpwFu5eOTw\nSK8p1HI5q439/97G/m+HN0lSkZ5d/wrHzTmeL/X7BjeMOSPy67xOPEaZTCbuEsqGn0UzP4tmafws\nXqpv4PAZIzi8zyjqJo3t0Guruqim9uRyOTsxktTS25s2s2/NyXyo5wCeu+6H9OjRHNFVVVVQILMN\ndEkqA01NOQZd+h80bHmDv1z3c3bqtW1HPEqgF3PZoiSpxD5z5RReaVzDuqsWbhfmURnokhSz066b\nzvK37+eZSx6n7669i34fA12SYnTRD37K/Nem8ZuvPM6gAR/q1HsZ6JIUkxvueYTvrb2Yu0Yu5MiD\n9uv0+xnokhSDuuwyLltyFjcdcRdnHDWkJO/pdeiS1M2KmQKNwssWJakbPbv+FQ6ZeSRn9JvYocEh\nr0OXpDLyUn0D+19zNId84HgWXXVNh15roEtSmWhvCjQKA12SykChKdAonBSVpDJQiinQKAx0SepC\npZoCjcJAl6QuUsop0CgMdEnqAqWeAo3CQJekEuuKKdAonBSVpBLqqinQKLxsUZJKpNgp0Ci8Dl2S\nuklnpkCjMNAlqRt0dgo0CgNdkrpYKaZAo3BSVJK6WHdNgUZhoEtSkbpzCjQKA12SitDdU6BRGOiS\n1EFxTIFGYaBLUgfENQUaRaFJ0VnAy8CKvH21wEZgWXj7Qt5zNcBqYBVwXMmqlKQy8Nun18U2BRpF\nocsWhwENwBxg64+iqcBbwI0tjh0MzAWGAv2BhcABQFOL47xsUVLFee7/XuUTM47kjH4TSj4FGkWU\nyxYLnaEvAt5o7b1b2TcSqAM2A+uBNcBhhYqUpHL3Un0DQ286icP7nBlLmEdV7JdzjQeeAv4H2C3c\n14+gFbPVRoIzdUmqWG9v2szB1/wb/Xt+nN9MvTructpVTKDfCgwE/hX4KzCtnWPtrUiqWE1NOYZ8\n4yvswI489a3bumSkv5SKucrllbztHwHzw+0XgH3ynhsQ7ttObW3t+9uZTIZMJlNEGZLUtY64sia2\nKdBsNks2m+3Qa6L8uKkmCO2ti6IfJjgzB5hAsAh6Ns2LoofRvCi6P9ufpbsoKqnsnX79DB546Tae\nmVgeg0Ol+C6XOmA40BfYQHCFS4ag3ZID1gFfDY9dCcwL7xuBcdhykVSBLvrBT7n/1e+W1RRoFH7b\noiTlueGeR7hsydncdfLCshoc8tsWJakDynkKNAp/p6gkUf5ToFHYcpGUenFPgUbhbyySpAK6+neB\nloqBLknt6I7fBVoqBroktaG7fhdoqXiViyS1Ic4p0K6SjP8LSeqA06+fwbK3f1E2vwu0VAx0SalS\nqVOgURjoklKjXH8XaKkY6JJSodKnQKNwUlRS4iVhCjQKL1uUlGiVMAUahdehS0q1SpkCjcJAl5Ra\nlTQFGoWBLimVKm0KNAonRSWlUhKnQKNIz/+ppFRI6hRoFAa6pMRI8hRoFAa6pESYdu+jiZ4CjcJA\nl1Tx6rLLmPzkqERPgUbhpKikipaWKdAovGxRUsVKyhRoFF6HLimxkjQFGoWBLimR3t60mf1qTmH3\nnv0TMQUahYEuKXGCKdD/pGFLfWKmQKNwUlRS4gRToKtTNwUahZ+GpIqR5inQKAx0SRUh7VOgURS6\nDn0W8DKwopXnJgFNwO55+2qA1cAq4LhSFChJW6dAfzZyQWqnQKMoFOi3Aye0sn8f4PPAX/L2DQbO\nDO9PAG6J8P6S1K7mKdB5qZ4CjaJQ4C4C3mhl/43ApS32jQTqgM3AemANcFgn65OUYk6BdkwxZ9Aj\ngY3A0y329wv3b7UR6F9kXZJS7tHlazl29vF8aa9vcMOYM+IupyJ0dFG0N3A5Qbtlq/aui2z1gvPa\n2tr3tzOZDJlMpoNlSEqqvzVs4vRp15N952bO2Ls28SP9bclms2Sz2Q69JspgUTUwHxgS3hYCb4fP\nDQBeAA4HRof7rg3vHwSmAk+2eD8HiyS16tq7HubKxReyR24I954/ncM/tk/cJZWNrhgsWgHslfd4\nHfApoB64H5hL0F/vDwwClnTw/SWl0NLVL3LqrRP4a4/f841PfY+pZ58Yd0kVqVCg1wHDgQ8BG4Ar\nCa582Sr/VHslMC+8bwTG0UbLRZIANr3XyFk3fY9fvPEtjtplLMsn3cHuH9g57rIqlt/lIikWP/jV\nE1z80Fh2zvXlJ+d8ny8MPTDuksqa3+Uiqeys3vg6J8+YwuqqBVz4sWlMP+/MVHxbYncw0CV1i8Yt\nTZz//TuY88LlDOl5JusmrGTfPXeNu6xEMdAldbm7Fz3NmHvG0VS1mTknL+Ccoz8Zd0mJZKBL6jIv\nvv4Wp0yrZemWH3N29Te5Y/x59NzBbwTpKga6pJJrasox+fZ7mLFqAgNzx7Li689wUPWecZeVeAa6\npJJ6ZNkaRs0Zz1tVG5j+ubl8/eRhcZeUGga6pJL4W8MmTpt2Hb95ZyYn7jmFeRMupvdOO8ZdVqoY\n6JI67TvzHmLqkxeyR+7jPHH+Mkf2Y2KgSyraH55/gdNvm+jIfpkw0CV12Kb3Ghl140zu/9u3OGqX\ncY7slwkDXVKH5I/sP3DO7xzZLyMGuqRIHNkvfwa6pHY5sl85DHRJbXJkv7IY6JK248h+ZTLQJb3P\nkf3KZqBLAhzZTwIDXUo5R/aTw0CXUsyR/WQx0KUUcmQ/mQx0KUXyR/aP3GWsI/sJY6BLKfHfC/6X\n/3p4LDvn9nBkP6EMdCnhHNlPDwNdSqitI/uzX6jh4z1HObKfAga6lEDByP5Ymqoa+fHJv3JkPyUM\ndClBHNlPNwNdSgBH9gUGulTxHNnXVoX+LTYLeBlYkbfvGuApYDnwCJA/WlYDrAZWAceVrkxJLf2t\nYROfu+oqPv+zT3P4nsdQ/+1lhnnKFbp2aRjQAMwBhoT7dgHeCrfHA58AzgMGA3OBoUB/YCFwANDU\n4j1zuVyu04VLabZ1ZL9v0xB+fsEMR/ZToKqqCgpkdqGWyyKgusW+t/K2+wCvhdsjgTpgM7AeWAMc\nBiyOUqykwvJH9q/45Exqzzkp7pJURortoX8L+HfgHYLQBujHtuG9keBMXVIntRzZXzrxdvru2jvu\nslRmig30K8LbFGA6MLqN41rtrdTW1r6/nclkyGQyRZYhJZ8j++mUzWbJZrMdek2U+d9qYD7NPfR8\n+wILgIMJwh3g2vD+QWAq8GSL19hDlyLYZmR/f0f20y5KD72YiYNBedsjgWXh9v3AKKAXMDA8bkkR\n7y+lWuOWJkbfPIsDZw5mp569WXfJSm6+YJRhroIKtVzqgOFAX2ADwRn3icCBwBZgLTA2PHYlMC+8\nbwTG0UbLRdL2mppyTPv5o1yz6EpH9lWUOH7k23KR8rz5j3eZdMdPuXPNjeSqGjn3I5O5beyXHdnX\nNqK0XAx0KSZ/2vAaF95+G4813MIH3xvChM9MpOaLx9laUatKcR26pBJbsGQVl9w9nVU7/IxBjWdw\n96kPcdqRB8ddlhLAQJe6wdb++A2P38jrvf7IsN5fY95/rOLggXvFXZoSxECXulDL/viogROZPuYe\nduuzU9ylKYHsoUtdwP64Ss0eutTN7I8rTga61En2x1UuDHSpSPbHVW7soUsdZH9ccbCHLpWQ/XGV\nOwNdaof9cVUSA11qhf1xVSJ76FIe++MqV/bQpYjsjysJDHSlVn5//LVef+CzvcfaH1dFM9CVOi37\n42dWT+Cm0Xez+wd2jrs0qVPsoSs17I+rktlDl9i2P75/4+n2x5VYBroSyf640shAV6LYH1ea2UNX\nItgfV9LZQ1fi2R+Xmhnoqjj2x6XWGeiqGPbHpfbZQ1fZsz8u2UNXhbM/LnWMga6yYn9cKp6BrrJg\nf1zqvEJNyFnAScArwJBw3w3ACOA9YC0wGvh7+FwNMAbYAlwEPNTKe9pD1/satzTxtVvncPv/XW5/\nXGpHlB56ob81w4AGYA7Ngf554BGgCbg23DcFGAzMBYYC/YGFwAHhcfkMdAFwz+MrGHP3OLZUvcst\nJ93Cl489NO6SpLIVJdB7FHiPRcAbLfY9THNIPwkMCLdHAnXAZmA9sAY4LHK1So2X6hsYesVkvjj/\nGE7a9xzqr3/CMJdKoLM99DEEIQ7QD1ic99xGgjN1CQgWPC+7415uem4C++U+x9MXrnCxUyqhzgT6\nFQR99LntHNNqb6W2tvb97UwmQyaT6UQZqgSPLl/LqNnjebPqL0wb/mMuHjk87pKkspbNZslmsx16\nTZSVp2pgPs09dID/BM4HjgE2hfumhPdb++oPAlMJ2jL57KGnyJv/eJfTpl3PY2/P4IRdLmXexP+i\nz8694i5LqjhdNVh0AjAZGE5zmAPcT3C2fiNBq2UQsKSI91dCXHvXw1y5+EL6Nh3EovP+yJEH7Rd3\nSVKiFQr0OoLg7gtsIDjjrgF6ESyOAjwBjANWAvPC+8Zwn6fiKbR09YuceutE/trjSWoOmcnV546I\nuyQpFfwuF5XMpvcaOXv697mv/psc0eur3Dfpcvru2jvusqRE8Ltc1G1+9OBiLvr1WHbK7c4vz17E\niYf9S9wlSaljoKtT1r5Yz4jpNTzPfL524HeZecFZTnlKMTHQVZTGLU1ccMtsZm+s4aAeX+TPE1ay\n3167xV2WlGoGujosf2R/9ogHOPeYT8VdkiQMdHXAS/UNnDztKv7YOJtR+17NHePPp9eOO8RdlqSQ\nga6CHNmXKoOBrnY5si9VDgNdrdpmZL+vI/tSJTDQtR1H9qXKZKDrfY7sS5XNQNe2I/t9vsrSSbMc\n2ZcqkIGeco7sS8lhoKfU6o2vc8rNNTzPLx3ZlxLCQE+Z/JH9g3t8iXUTn2PfPXeNuyxJJWCgp4gj\n+1KyGegp4Mi+lA4GeoK1HNlf8fVnOKh6z7jLktRFDPSEcmRfSh8DPWEc2ZfSy0BPEEf2pXQz0BPA\nkX1JYKBXNEf2JeUz0CuUI/uSWjLQK4wj+5LaYqBXCEf2JRVioFeAex5fwei7x9JU9Z4j+5LaZKCX\nsZfqGxgxrZaljXMc2ZdUkIFehvJH9qtzRzuyLymSHgWenwW8DKzI2/dF4FlgC/DJFsfXAKuBVcBx\nJaoxVR5dvpa9J53EzGeu5KZhd7Lmu3cY5pIiKRTotwMntNi3AjgN+G2L/YOBM8P7E4BbIry/Qm/+\n412Oufoajv3p4RzaN0P9t5cz/pTPxl2WpApSqOWyCKhusW9VG8eOBOqAzcB6YA1wGLC4+PLSoXlk\n/2B+d/5SPjN437hLklSBStlD78e24b0R6F/C908cR/YllVJXL4rmuvj9K1L9m+9w9s0zeKjhuxzR\n52uO7EsqiVIG+gvAPnmPB4T7tlNbW/v+diaTIZPJlLCM8tW4pYnxP5jLD/98BXtvGcqvz3mCz39q\nUNxlSSpD2WyWbDbboddEmRmvBuYDQ1rsfwy4BPhj+HgwMJegb94fWAjsz/Zn6blcLn0n7tPvy3L5\nbybRgx254dhpjD3pyLhLklRBqqqqoEBmFzpDrwOGA32BDcBUoB6YGe57AFgGfAFYCcwL7xuBcdhy\nYcGSVYypu5TXd1jBuMHXctNXvuR3r0jqEnEkSyrO0J9d/wqjbr2KZ6vmceKulzH3ovF84J//Ke6y\nJFWoUpyhq4Pq33yHs26ezsMN0/hEj3P504WrGDTgQ3GXJSkFDPQSccFTUtwM9BJoXvDsyc3H/IRx\nI46KuyRJKWSgd4ILnpLKiYFehG0WPPe8jLkX3eWCp6TYGegd4IKnpHJmoEfggqekSmCgF+CCp6RK\nYaC3wQVPSZXGQG/BBU9JlcpAD7ngKanSpT7Q8xc899pyqAuekipWqgPdBU9JSZLKQHfBU1ISpSrQ\nXfCUlGSpCHQXPCWlQaID3QVPSWmS2EB3wVNS2iQu0F3wlJRWiQl0FzwlpV3FB7oLnpIUqNhAd8FT\nkrZVkYHugqckba+iAt0FT0lqW0UEessFzzvHz2O3PjvFXZYklZWyDvT8Bc+P9zjHBU9JakdZBroL\nnpLUcWUX6C54SlJxehR4fhbwMrAib9/uwMPA88BDwG55z9UAq4FVwHEdKWTBklXsPeEUJj8+mvM+\nNpk3py02zCWpAwoF+u3ACS32TSEI9AOAR8LHAIOBM8P7E4BbIrw/z65/hSGXXciIe4dx6J6f5dXa\n57j5glGpuHolm83GXULZ8LNo5mfRzM+iYwoF7iLgjRb7TgFmh9uzgVPD7ZFAHbAZWA+sAQ5r643r\n33yH47/5HYbcNpgdevTkT19fxS9rLknV1Sv+YW3mZ9HMz6KZn0XHFNND34ugDUN4v1e43Q9YnHfc\nRqB/a28w9tY7XfCUpBLr7KJoLry19/x2fvz8TBc8JSkG1Wy7KLoK2Dvc/nD4GIJe+pS84x4EDm/l\n/dbQ/IPAmzdv3rxFu62hBKrZNtCvBy4Lt6cA14bbg4HlQC9gILAWSP7KpiRViDrgReA9YAMwmuCy\nxYW0ftni5QQ/RVYBx3drpZIkSZI6prUhpbTaB3gMeBZ4Brgo3nJitRPwJEG7biXwnXjLKQs7AMuA\n+XEXErP1wNMEn8WSeEuJ3W7A3cBzBH9PPh1vOTAMOAQDHYJF5X8Nt/sAfwI+Fl85sesd3vckuPQ1\n7Zc/TQR+AtwfdyExW0fQ4lUw8zMm3O4J7NraQQUnOUuotSGltHqJ4IwUoIHgp26/+MqJ3dvhfS+C\ns9P6GGuJ2wDgROBHeFEB+BlAEN7DCLocAI3A31s7sDsDXa2rJviXy5Mx1xGnHgQ/4F4maEWtjLec\nWN0ETAaa4i6kDOQILsD4A3B+zLXEaSDwKsFXsSwFfkjzv2pjVY0tl3x9CP6wnlrowJTYlaDlkom5\njriMAL4fbmewh/7h8H4Pgh/4w2KsJU6HEnylytDw8XTg6tYO9Aw9PjsC9wB3AvfFXEu5+DvwAMEf\n4DQ6guC7ktYRXDJ8NDAn1ori9dfw/lXg57Tz3VAJtzG8/T58fDfwyfjKaVaNZ+gQ9AXnEPzzOu36\n0jzLsDPwW+CY+MopG8NJ9xl6b2CXcPufgd/Rwa/kTpjfEnzDLUAtcF18pQS2Dim9S/OQUlodRdAj\nXU5wSdYytv+a4rQYQtAXXE5widrkeMspG8NJ91UuAwn+TCwnuLS3Jt5yYvcJgjP0p4B7aeMqF0mS\nJEmSJEmSJEmSJEmSJEmSJEkp9P+HQaxD4APoDQAAAABJRU5ErkJggg==\n",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAWgAAAEACAYAAACeQuziAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAExdJREFUeJzt3X2UVXW9x/E3M4AIeLV8SM2uGNUNhJtyW+UK1J3aDUss\nLW/mDVZq2pVAexATNT2uVLRMqcBVhhoUeX1Iy5QrZrjDh3wEozKViELM0qTA50GY+8c+A+MwcvaZ\ns/fZD+f9WmvWOTNnnzPfjeNnfvPd37M3SJIkSZIkSZIkSZIkSZKkBpwC/Ab4bfW+JCkHRhGF8yCg\nHfg5MDzTiiSpRbTVePydwH3Ay8AG4JfAkWkXJUmqHdC/BfYH3ggMBj4M7JF2UZIk6F/j8UeBi4Db\ngBeApcDGtIuSJEG/Ore/AFgFfKfrC8OHD+9csWJFokVJUgtYAbxtaxvUanEA7FK9/VfgCOBHr/kO\nK1bQ2dlZ2o9zzjkn8xrcP/evFfevbPv2Sser7H3aSQz6/Lt46PEnIcbARa0WB8D1wI7AemAysC7G\ncyRJVWvWvcSoc47h5c7nWH7mYvbY+V9iPS9OQB/QWGmS1LqWr36WMRdPYKf2t/L4edcwdNuBsZ8b\np8XR0oIgyLqEVLl/xVbm/SvDvi1etpJRl45l76EHsPxr8+oKZ6j/IGFvOjs7OxN4GUkqj/mLljDp\n1gkcufN0rps2ZYvH+/XrBzUy2BW0JCVsxrW3MXHheL404tu9hnNccXrQkqSYTpw9jzmrpjFr/xuY\nfNi4hl7LgJakBGzc2Mn482ewaO3l3HRUyGHvHdHwaxrQktSgjvUbGHPWVFZ03MP9k+9hzNt3T+R1\nDWhJakBfZ5zj8CChJPXR8tXPsufZB7NN2xBWzViQaDiDAS1JfdLojHMcBrQk1Wn+oiW8/4fjOHzX\nKdx73oX0b08nSg1oSapDUjPOcXiQUJJiSnLGOQ4DWpJqSGPGOQ4DWpK2Iq0Z5zgMaEl6HWnOOMfh\nQUJJ6kXaM85xxAno6cDvgN8QXe5qm1QrkqSMNWPGOY5aAT0MOAEYA4wG2oGjU65JkjLTrBnnOGp9\n53VE1yIcTNSvHgw8mXZRkpSFZs44x1HrIOEa4BvAKuAlYCFwe9pFSVKzNXvGOY5aAT0c+DxRq2Mt\ncB3w38D87htVKpVN94MgKMW1xCS1hmbNOIdhSBiGdT2n1jUJPwF8APhM9fOJwH7A57pt4zUJJRVS\n9xnnuycvaOqMcxLXJHyUKJC3rb7QIcAjSRQnSVlas+4lhp32cf7yyuMsP2NxU8M5rloB/WtgHvAg\nsKz6tctTrUiSUpaHGec4arU44rDFIakwFi9byQfmHsq+236Uu869ILMxuiRaHJJUGnmacY4j39VJ\nUkLyNuMchydLklR6eZxxjsOAllRaWZ3HOSkGtKRSyvI8zkkxoCWVTtbncU6KBwkllUpRZpzjMKAl\nlUZezuOcFANaUikUbcY5juLvgaSWV8QZ5zg8SCip0Io64xyHAS2pkIo+4xyHAS2pcMow4xyHAS2p\nUMoy4xyHBwklFUaZZpzjMKAlFULZZpzjiBPQ/wYs7faxFjg5zaIkqbsyzjjHUe8VVdqAJ4H3AE9U\nv+YVVSSlZsa1t3HmQ5/i1Hd+h68de2TW5SQmzhVV6j1IeAiwgs3hLEmpKfOMcxz1BvTRwI/SKESS\numzc2MmhF1zIL/753dLOOMdRT0APBCYAX+75QKVS2XQ/CAKCIGi0LkktqqwzzmEYEoZhXc+ppwf9\nEeAkYHyPr9uDlpSI7jPOy868odRjdElf1fuTwNWNFCRJr6fVZpzjiBvQQ4gOEN6QYi2SWlQrzjjH\nETegXwB2Ap5LsRZJLahVZ5zj8F9CUmbKeh7npHiyJEmZaPUZ5zgMaElN1QrncU6KAS2paco645wW\nA1pSU7TSeZyT4kFCSalzxrlvDGhJqXLGue8MaEmpcca5Mf5rSUqFM86N8yChpMQ545wMA1pSYpxx\nTpYBLSkRzjgnz4CW1DBnnNPhQUJJDXHGOT0GtKQ+c8Y5XQa0pD5xxjl9cf5FdwCuB34PPALsl2pF\nknLPGefmiHOQ8JvAAuDj1e2HpFqRpFw7cfY8rlh1GrMPuJGTPjw263JKrdZVvbcHlgJv3co2XtVb\nagFdM853rP0eNx61wBnnBsW5qnetFfRewDPAVcC7gIeAU4AXE6hPUkF0zTj/seNXPDDlHvYZvlvW\nJbWEWgHdHxgDTAEeAGYCpwNnd9+oUqlsuh8EAUEQJFmjpAx1zTi/0vk8j5/5S8fo+igMQ8IwrOs5\ntVocuwK/IlpJA4wjCujDum1ji0MqqeWrn2XMxRPYuX04y867wjG6BMVpcdSa4vgr8ATwjurnhwC/\na7gySbnXNeM8arsD+cPXnXHOQq0VNES95znAQGAFcCywttvjrqClkpm/aAmTbp3Ax3Y5g2tP/VzW\n5ZRSnBV0nICuxYCWSuT8axbylSUTmTbiu1z06SOyLqe0kpjikNRCTpg9lytXfdkZ55wwoCW9Zsb5\np0fd4YxzThjQUovrWL+Bfc+awsqOe51xzhkDWmphf1/7IqMrx9DR+YIzzjnk6aekFvXYE39nr8rB\nbNu2HX+ecYvhnEMGtNSCFi9byeiZYxk1NHDGOccMaKnFdJ3H+aO7ncyvvjqDtrYkpm2VBgNaaiHn\nX7OQiQvHc+rIWb4BpQA8SCi1CGeci8eAlkrOGefiMqClEnPGudgMaKmknHEuPg8SSiXkjHM5GNBS\nyTjjXB4GtFQizjiXS9we9J+AdcAGYD3wnrQKktQ3m87jPNLzOJdF3IDuBAJgTXqlSOorZ5zLqZ4p\nDv9WknLGGedyq2cFfTtRi+O7wPdSq0hSLM44l1/cgB4LPAXsDPwceBS4M62iJG2dM86tIW5AP1W9\nfQa4kegg4aaArlQqmzYMgoAgCJKpTtIWHnvi77z7kgns3PY2lp93rWN0BRGGIWEY1vWcOH3lwUA7\n8BwwBLgNOLd6C17VW2qaxctWcsjc8fzH4CO5+9wLHKMrsKSu6v0molVz1/bz2RzOkppk/qIlTLp1\nAh/b7QxPFdoikvj16wpaStmmGecRzjiXRVIraEkZcsa5dRnQUk454ywDWsohZ5wFBrSUO844q4tn\ns5NyxPM4qzsDWsoJz+OsngxoKQc8j7N6Y0BLGTv/moVMXDieU0fO8g0oeg0PEkoZcsZZW2NASxlw\nxllxGNBSkznjrLgMaKmJnHFWPTxIKDWJM86qlwEtNYEzzuoLA1pKmTPO6isDWkqRM85qRNyDhO3A\ng8BqYEJ65UjlccLsuVyx6jRnnNVncQP6FOARYLsUa5FKoWvGedHay7npqNAZZ/VZnBbHHsCHgDkk\nc4ksqbQ61m9g9PTJ3LnmWu7/7D2GsxoSZwV9KTANcCZI2oquGedXOp9n+ZmLHaNTw2qtoA8DngaW\n4upZel1dM86D2oayasYCw1mJqLWCfh9wOFGLYxDRKnoeMKn7RpVKZdP9IAgIgiDJGqVcW7xsJYfM\nHc+YIUdw17kX0L/d4ShtKQxDwjCs6zn1rIoPBE5lyymOzs7Ozrq+qVQW8xctYdKtEzhy5+lcN21K\n1uWoQPr16wc1MrjeX/UmsVR1/jULmXjbB/nSiG8bzkpFEn1lV9BqOV0zzrP2/zGTDxuXdTkqoDgr\naM9mJ9XBGWc1kwEtxdSxfgNjzprKio57uH/yPYx5++5Zl6SSM6ClGNase4lR5xzDy53POeOspnEe\nSKph+epn2fPsg9mmbYgzzmoqA1raisXLVjLq0rHsPfQAln/N8ziruQxo6XV0ncf58F2ncO95F/oG\nFDWdP3FSL2ZcexsTF453xlmZ8iCh1MOJs+cxZ9U0Zu1/gzPOypQBLVU546y8MaAlnHFWPhnQannO\nOCuvPEioluaMs/LMgFbLcsZZeWdAqyU546wi8KdSLccZZxWFBwnVUpxxVpHECehBwC+BbYCBwE+B\n6WkWJSXNGWcVUZyAfhl4P/Bidfu7gHHVWyn3nHFWUcVtcbxYvR0ItANr0ilHSpYzziqyuAcJ24CH\ngb8BdwCPpFaRlBBnnFV0cVfQG4F9gO2BhUAAhF0PViqVTRsGQUAQBAmVJ9XvwcefZOoPZnHf+jm8\nd7vPcGflfMfolLkwDAnDsK7n9OWq3l8BXgIurn7uVb2VC/MXLeGsWy7hzwMX8O9M5JJPnMxB+wzP\nuiypV0ld1Xsn4FXgn8C2wAeAcxstTkrCqxs2cs6Pbmb2Q5fw/IA/Mn6nkwmPm8Web9oh69KkhsUJ\n6N2AuUR96DbgB8Av0ixKquXpf7zAlCu+z0+emsnAjW/guJFf5MJJH2PwoAFZlyYlpi8tjp5scahp\nuveXd+s4gLMO/iKfPfR9tLUl8aMsNU9SLQ4pcz37y7cffa/9ZZWeAa3csr+sVmdAK3fsL0sRA1q5\n0bO//M2Dv29/WS3NgFbm7C9LvTOglQn7y1JtBrSayv6yFJ8BraZ44LHVTP3BLO5/9Qr7y1JMBrRS\n9cNfPMRXFlxqf1nqAwNaietYv4HK1Tdz2ZJLeH7ASvvLUh8Z0EqM/WUpWQa0Gra5vzyH3ToOtL8s\nJcSAVp9t2V++z/6ylCADWnWxvyw1jwGtWOwvS81nQGur7C9L2YkT0G8B5gG7AJ3A5cC30ixK2bO/\nLGUvzjJo1+rHw8BQ4CHgo8Dvq497RZWS2KK//MaTmX3cZ+wvSylI6ooqf61+ADxPFMy7szmgVXD2\nl6V8qrcHPQzYF7gv+VLUbA8+/iRT5n3b/rKUU/UE9FDgeuAUopX0JpVKZdP9IAgIgiCB0pSW7v3l\n0Z2fsr8sNUEYhoRhWNdz4i6VBgA3A/8HzOzxmD3oAujZX/7gG6Zy2fEn2F+WMhKnBx0noPsBc4Fn\ngS/08rgBnWPd+8sDNu7A8SO+ZH9ZyoGkAnocsBhYRjRmBzAduLV634DOoZ7zy2ce9AX+50Nj7S9L\nOZHUFMddQFsSBSl9zi9L5eE7CUtgi/7yjlMJj/f8GFLRGdAFtkV/eaT9ZalMDOgC6tlfnnnQVfaX\npRIyoAvE/rLUWgzonLO/LLUuAzqn7C9LMqBzxv6ypC4GdE7YX5bUkwGdIfvLkrbGgM6A/WVJcRjQ\nTWR/WVI9DOgmsL8sqS8M6JTYX5bUKAM6YfaXJSXFgE6I/WVJSTOgG2R/WVJa4gT0lcCHgaeB0emW\nUwz2lyU1Q5y/v/cnuor3PHoP6Ja55JXX95OUlKQueXUnMCyBegrL/rKkLNiD3gr7y5KylEhAVyqV\nTfeDICAIgiReNhP2lyWlIQxDwjCs6zlx/0YfBvyMEveg7S9LaqaketClZn9ZUl7FCeirgQOBHYEn\ngLOBq9IsqhnsL0vKuySWiYVpcWzRX37DVC47/gT7y5KazhZHlefHkFREpQ5o+8uSiqyUAW1/WVIZ\nlCagnV+WVDaFD2j7y5LKqrABbX9ZUtkVLqDtL0tqFYUIaPvLklpRrgPa/rKkVpbLgLa/LEk5C2j7\ny5K0WeYBbX9ZknqXWUDbX5akrWt6QNtflqR4mhbQ9pclqT5xAno8MBNoB+YAF8V9cfvLktR3bTUe\nbwdmEYX0SOCTwIhaL/r0P17gvy6ezdDT38k3l57HpJEnse6rK7jljGmFC+d6L/JYNO5fsZV5/8q8\nb3HVCuj3AH8A/gSsB/4X+MjrbfzAY6vZ76zT2fWiPbn7L4uY+f6reO4b9/OtE48u7MG/sv+QuH/F\nVub9K/O+xVWrxfFmousQdlkNvLfnRvaXJSl5tQI61sUGP33rEfaXJSlhtWbb9gMqRD1ogOnARl57\noPAPgMtlSarPCuBtjbxA/+qLDAMGAg8T4yChJKk5DgUeI1opT8+4FkmSJKnYxgOPAsuBL2dcS9Ku\nBP4G/CbrQlLyFuAO4HfAb4GTsy0ncYOA+4jaco8AM7ItJxXtwFLgZ1kXkoI/AcuI9u/+bEtJxQ7A\n9cDviX4+90v6G7QTtT2GAQMoX396f2BfyhvQuwL7VO8PJWpjlem/H8Dg6m1/4F5gXIa1pOGLwHzg\npqwLScFK4I1ZF5GiucBx1fv9ge1726jWG1W2pq43sRTQncA/si4iRX8l+qUK8DzRb/LdsysnFS9W\nbwcSLSjWZFhL0vYAPkR0+oWynmmsrPu1PdEC8Mrq568Ca3vbsJGA7u1NLG9u4PWUnWFEfy3cl3Ed\nSWsj+iX0N6J2ziPZlpOoS4FpRGOvZdQJ3A48CJyQcS1J2wt4BrgKWAJ8j81/7b1GIwEd600syr2h\nRL2wU4hW0mWykaiNswdwABBkWk1yDgOeJurPlnWVOZZo0XAo8DmiFWdZ9AfGAJdVb18ATu9tw0YC\n+kmiA01d3kK0ilZxDAB+DPwQ+EnGtaRpLXAL8O6sC0nI+4DDifq0VwMHAfMyrSh5T1VvnwFuJGqp\nlsXq6scD1c+vJwrqRLXCm1iGUd6DhP2I/qe+NOtCUrIT0ZFygG2BxcDB2ZWTmgMp3xTHYGC76v0h\nwN3Af2ZXTioWA++o3q9Qx2mc61HmN7FcDfwFeIWo135stuUkbhxRC+Bhoj+Vl7L5Lf1lMJqov/cw\n0bjWtGzLSc2BlG+KYy+i/24PE42Ali1bAN5FtIL+NXADrzPFIUmSJEmSJEmSJEmSJEmSJEmSJCXi\n/wE3xr1WBYGL4gAAAABJRU5ErkJggg==\n",
        "text": [
-        "<matplotlib.figure.Figure at 0xb874290>"
+        "<matplotlib.figure.Figure at 0x4669150>"
        ]
       }
      ],
-     "prompt_number": 103
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -1262,7 +1276,7 @@
       "- [matplotlib](http://matplotlib.org/) est *la* r\u00e9f\u00e9rence pour les graphiques 2D en Python.\n",
       "- En cas de doute sur les possibilit\u00e9s: la [gallerie](http://matplotlib.org/gallery.html) est tr\u00e8s compl\u00e8te.\n",
       "- Graphique exportable en de multiples formats (png, pdf, eps et d'autres).\n",
-      "- Include de $\\LaTeX$ dans les axes, labels, titre, etc."
+      "- Inclusion de $\\LaTeX$ dans les axes, labels, titre, etc."
      ]
     },
     {
@@ -1843,12 +1857,10 @@
       "Exercice: cr\u00e9er une classe\n",
       "--------------------------\n",
       "\n",
-      "- La classe repr\u00e9sente un ensemble de points connect\u00e9s al\u00e9atoirement.\n",
-      "- La classe peut \u00eatre initialis\u00e9e avec:\n",
-      "    - un nom de fichier.\n",
-      "    - un param\u00e8tre (nombre de points).\n",
-      "- Si le fichier existe, il est lu.\n",
-      "- Combinez la classe avec un programme en ligne de commande pour g\u00e9rer l'\u00e9x\u00e9cution."
+      "- La classe est intialis\u00e9e avec un param\u00e8tre, le mu de l'application logistique vue ci-dessus.\n",
+      "- La classe poss\u00e8de deux m\u00e9thodes:\n",
+      "    - fixed_point utilise scipy.optimize.brentq pour trouver le point fixe de l'application logistique, strictement sup\u00e9rieur \u00e0 z\u00e9ro.\n",
+      "    - trajectory, \u00e9tant donn\u00e9 le point de d\u00e9part x0 et la longueur de la trajectoire N.\n"
      ]
     }
    ],
