--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "celltoolbar": "Slideshow",
-  "name": ""
+  "name": "intro"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,7 +52,8 @@
       "- Cette pr\u00e9sentation est \u00e9crite dans un *Notebook* IPython.\n",
       "- Tous les exemples de code peuvent \u00eatre copi\u00e9s et coll\u00e9s dans un terminal ou un notebook IPython (apr\u00e8s requ\u00eate \"%pylab inline\").\n",
       "- Cette pr\u00e9sentation utilise Python 2 (Python 3 existe mais n'est pas celle utilis\u00e9e par d\u00e9faut).\n",
-      "- N'h\u00e9sitez pas \u00e0 m'interrompre."
+      "- N'h\u00e9sitez pas \u00e0 m'interrompre.\n",
+      "- Pour installer un environnement scientifique Python: <http://scipy.org/install.html>"
      ]
     },
     {
@@ -1276,7 +1277,7 @@
       "- [matplotlib](http://matplotlib.org/) est *la* r\u00e9f\u00e9rence pour les graphiques 2D en Python.\n",
       "- En cas de doute sur les possibilit\u00e9s: la [gallerie](http://matplotlib.org/gallery.html) est tr\u00e8s compl\u00e8te.\n",
       "- Graphique exportable en de multiples formats (png, pdf, eps et d'autres).\n",
-      "- Inclusion de $\\LaTeX$ dans les axes, labels, titre, etc."
+      "- Inclusion de LaTeX dans les axes, labels, titre, etc."
      ]
     },
     {
